--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:screenOrientation="landscape"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,6 +49,11 @@
             android:screenOrientation="portrait"
             >
         </activity>
+        <activity android:name=".ui.VideoAndImgActivity"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+
 
 
 
